--- a/package.json
+++ b/package.json
@@ -10,16 +10,28 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.3",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@stream-io/node-sdk": "^0.6.2",
     "@stream-io/video-react-sdk": "^1.20.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.540.0",
+    "motion": "^12.23.12",
     "next": "15.4.7",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^3.0.5",
     "svix": "^1.75.0",
     "tailwind-merge": "^3.3.1"
   },
